--- a/index.html
+++ b/index.html
@@ -12,7 +12,74 @@
 </head>
 
 <body>
-
+  <div class="container-fluid no-gutters">
+    <div class="row mt-5">
+      <div class="col">
+        <h1 class="text-muted text-center">Two Grid Tricks</h1>
+      </div>
+    </div>
+    <div class="row mt-2 mb-5">
+      <div class="col">
+        <h4 class="text-center text-muted">Wrapper around .container or cards inside .col</h4>
+      </div>
+    </div>
+    <div class="row bg-primary text-white">
+      <div class="col-12">
+        <div class="row mt-5 pb-3">
+          <div class="col-12">
+            <h4 class="text-center">Wraper <b>around</b> .container</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6 text-center font">One</div>
+          <div class="col-6 text-center font">Two</div>
+        </div>
+        <div class="row pb-3">
+          <div class="col-6 text-wrap text-center">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut totam, fugit odit esse, numquam sed alias
+              neque incidunt sapiente quidem qui voluptates illum, aliquam voluptatem quos delectus quis explicabo iure?
+            </p>
+          </div>
+          <div class="col-6 text-wrap text-center">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora exercitationem assumenda vitae eveniet
+              magni praesentium numquam ipsa omnis quam, soluta quibusdam alias! Inventore, quam nisi? Ipsam dolorum
+              numquam alias sint.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row bg-lightgray pb-3 pt-2">
+      <div class="col-12 text-center text-dark">
+        <h4 class="pb-3 pt-3">Cards <b>inside</b>.col</h4>
+        <div class="row">
+          <div class="col-6">
+            <div class="card float-right mr-5  bg-white" style="width: 22rem;">
+              <div class="card-body">
+                <h6 class="card-title mt-3 text-center font">Three</h6>
+                <p class="card-text text-center mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Architecto ut rem
+                  ipsam
+                  quis obcaecati, doloremque debitis vel vero a, aliquid quidem nulla praesentium neque saepe alias
+                  eveniet tempora provident esse.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="card justify-content-left ml-5 bg-white" style="width: 22rem;">
+              <div class="card-body">
+                <h6 class="card-title mt-3 text-center font">Four</h6>
+                <p class="card-text text-center mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Architecto ut rem
+                  ipsam
+                  quis obcaecati, doloremque debitis vel vero a, aliquid quidem nulla praesentium neque saepe alias
+                  eveniet tempora provident esse.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
